# CANON-AS8-Mod

./: .gitignore  CMakeLists.txt
bad-apple/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
bad-apple/res/: .gitignore  README.md  badapple.hs  compressor.py  requirements.txt
bad-apple/src/: main.c
boards/shields/cancalc/: Kconfig.defconfig  Kconfig.shield  canon_as8_calc_1.overlay
display-test/: CMakeLists.txt  prj.conf
display-test/src/: main.c
drivers/: CMakeLists.txt  Kconfig
drivers/input/: CMakeLists.txt  Kconfig  Kconfig.kscan  input_gpio_kscan.c
dts/bindings/input/: gpio-kscan.yaml
include/os/input/: keycodes.h
key-matrix/: CMakeLists.txt  Kconfig  app.overlay  pin-matrix.md
key-matrix/src/: main.c
manifest/: west.yml
manifest/zephyr/: module.yml
os/: CMakeLists.txt
os/include/os/: display.h  test.h
os/src/: display_init.c
